[gd_scene load_steps=14 format=3 uid="uid://dgjava7c3ir6u"]

[ext_resource type="Resource" uid="uid://dvjjmneb2ovxf" path="res://data/settings/unit/main_hero.tres" id="2_4olwv"]
[ext_resource type="Script" path="res://scripts/InputSystem.gd" id="10_yja2f"]
[ext_resource type="PackedScene" uid="uid://qe5vh8lqbl8k" path="res://scenes/visual/EffectManager.tscn" id="12_28wh2"]
[ext_resource type="Script" path="res://scripts/UnitOrder.gd" id="12_6735i"]
[ext_resource type="PackedScene" uid="uid://cgdko33qxd1ci" path="res://scenes/levels/components/NavRegion.tscn" id="18_es1be"]
[ext_resource type="PackedScene" uid="uid://du6xcv567vuwr" path="res://scenes/levels/Level_1 witn new move.tscn" id="19_nbpj7"]
[ext_resource type="PackedScene" uid="uid://ccjtjw661geoi" path="res://scenes/2d/Line2dManager.tscn" id="20_syji7"]
[ext_resource type="PackedScene" uid="uid://deiwiskh30hey" path="res://scenes/levels/components/ObjectSelector.tscn" id="22_4ur3f"]
[ext_resource type="Script" path="res://scripts/navigation/ObjectMover.gd" id="23_eg25c"]
[ext_resource type="Script" path="res://scripts/units_manager/UnitControll.gd" id="25_xuv3j"]
[ext_resource type="Script" path="res://scripts/units_manager/MoveControll.gd" id="26_xex30"]
[ext_resource type="Script" path="res://scripts/units_manager/AttackControll.gd" id="27_3j6ta"]
[ext_resource type="Script" path="res://scripts/utils/DrawDebug.gd" id="27_xmkd7"]

[node name="World" type="Node2D"]

[node name="UnitOrder" type="Node2D" parent="."]
script = ExtResource("12_6735i")
main_hero_start_setting = ExtResource("2_4olwv")

[node name="NavigationRegion" parent="." instance=ExtResource("18_es1be")]

[node name="Level_1" parent="NavigationRegion" instance=ExtResource("19_nbpj7")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-96, -80)
anchor_mode = 0
zoom = Vector2(2, 2)

[node name="UnitControll" type="Node2D" parent="." node_paths=PackedStringArray("player", "move_controll", "attack_controll", "object_selector")]
script = ExtResource("25_xuv3j")
player = NodePath("../NavigationRegion/Level_1/Player")
move_controll = NodePath("MoveControll")
attack_controll = NodePath("AttackControll")
object_selector = NodePath("../ObjectSelector")

[node name="MoveControll" type="Node2D" parent="UnitControll" node_paths=PackedStringArray("object_mover", "line2d_manager")]
script = ExtResource("26_xex30")
object_mover = NodePath("../../ObjectMover")
line2d_manager = NodePath("../../Line2dManager")

[node name="AttackControll" type="Node2D" parent="UnitControll" node_paths=PackedStringArray("line2d_manager", "effect_manager")]
script = ExtResource("27_3j6ta")
line2d_manager = NodePath("../../Line2dManager")
effect_manager = NodePath("../../EffectManager")

[node name="InputSystem" type="Node2D" parent="."]
script = ExtResource("10_yja2f")

[node name="DrawDebug" type="Node2D" parent="."]
z_index = 100
script = ExtResource("27_xmkd7")

[node name="ObjectSelector" parent="." node_paths=PackedStringArray("camera") instance=ExtResource("22_4ur3f")]
camera = NodePath("../Camera2D")

[node name="ObjectMover" type="Node2D" parent="." node_paths=PackedStringArray("nav_region")]
script = ExtResource("23_eg25c")
nav_region = NodePath("../NavigationRegion")

[node name="EffectManager" parent="." instance=ExtResource("12_28wh2")]

[node name="Line2dManager" parent="." instance=ExtResource("20_syji7")]

[connection signal="on_pressed_rmc" from="InputSystem" to="UnitControll" method="_on_input_system_on_pressed_rmc"]
